--- a/src/index.css
+++ b/src/index.css
@@ -23,6 +23,7 @@ body {
   display: flex;
   align-items: center;
   justify-content: center;
+  background-color: lightyellow;
 }
 
 .app {
@@ -166,4 +167,14 @@ form h2 {
   text-transform: uppercase;
   letter-spacing: -0.5px;
   margin-bottom: 1.6rem;
+}
+
+.header {
+  margin-bottom: 40px;
+}
+.header h1 {
+  font-size: 36px;
+}
+.header p {
+  font-size: 16px;
 }
